iac/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox
  namespace: sandbox-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      containers:
        - name: sandbox
          image: sandbox-test:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
