iac/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox
  namespace: sandbox-test
spec:
  type: ClusterIP
  selector:
    app: sandbox
  ports:
    - port: 80
      targetPort: 3000
